Adding new features as course id as a new variable and connect to internship registration /dropdown feature in internship registration/download excel/update excel directly to the db through frontend these are the new features added

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -62,9 +62,9 @@
     <nav>
         <a href="login">Login</a>
         <a href="register">Register</a>
-        <a href="intern_register">Intern Course</a>
+        <a href="available-courses">Intern Course</a>
        
-        <a href="inter_list">For Hire</a>
+        <a href="admin-login">For Hire</a>
         <a href="intern_status">Intern Status</a>
       
    
